--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -22,3 +22,17 @@ a {
 .action-button {
   @apply bg-indigo-700 hover:bg-indigo-800 text-white rounded-lg;
 }
+
+/* Navigation bar styling */
+.sidebar-icon {
+  @apply relative flex items-center justify-center h-12 w-12 mt-2 mb-2 mx-auto shadow-lg bg-gray-800 text-indigo-500 hover:bg-indigo-600 hover:text-white rounded-3xl hover:rounded-xl transition-all duration-300 ease-linear cursor-pointer;
+}
+
+.sidebar-tooltip {
+  @apply absolute w-auto p-2 m-2 min-w-max left-16 rounded-md shadow-md text-white bg-gray-900 text-xs font-bold z-50 transition-all duration-100 origin-left;
+  transform: scale(0);
+}
+
+.sidebar-icon:hover .sidebar-tooltip {
+  transform: scale(1);
+}
