--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,12 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+@import './editorjs.css';
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+h1 {
+    @apply text-3xl;
+}
+h2 {
+    @apply text-2xl;
+}
+h3 {
+    @apply text-xl;
+}
+h4 {
+    @apply text-lg;
 }
 
 a {
